--- a/styles.css
+++ b/styles.css
@@ -70,14 +70,6 @@ div {
 a.link{
     color: #A5FDFF;
 }
-.title{
-    text-align: center;
-    font-size: 150%;
-}
-.smalltitle{
-    text-align: center;
-    font-size: 125%;
-}
 .center {
     text-align: center;
     position: relative;
